<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:orientation="vertical">
		
    <LinearLayout android:layout_width="match_parent" android:id="@+id/updateConfLinearLayout1" android:orientation="vertical" android:layout_height="wrap_content"  >
		<TextView android:id="@+id/updateConfTitleTV" android:text="@string/updateConfTitleString" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_gravity="top" android:gravity="center_vertical|center_horizontal" android:textSize="25px"></TextView>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:id="@+id/updateConfLinearLayout1" android:orientation="vertical" android:layout_height="wrap_content"  >
		<TextView android:id="@+id/updateConfTitleTV1" android:text="" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_gravity="top" android:gravity="center_vertical|center_horizontal" android:textSize="25px"></TextView>
    </LinearLayout>

	<TableLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/updateConftableLayout1">
        <TableRow android:id="@+id/updateConftableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TextView android:id="@+id/updateConfeid4TV" android:text="@string/updateConfeid4String" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_gravity="top" android:gravity="center_vertical|center_horizontal" android:textSize="25px" android:padding="7dip"></TextView>
			<EditText android:id="@+id/updateConfeid4Text" android:text=""  android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="7dip"></EditText>
        </TableRow>
	</TableLayout>   

    <LinearLayout android:layout_width="match_parent" android:id="@+id/updateConfLinearLayout1" android:orientation="vertical" android:layout_height="wrap_content"  >
		<TextView android:id="@+id/updateConfTitleTV1" android:text="" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_gravity="top" android:gravity="center_vertical|center_horizontal" android:textSize="25px"></TextView>
    </LinearLayout>

	<TableLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/updateConftableLayout2">
        <TableRow android:id="@+id/updateConftableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TextView android:id="@+id/updateConfeid6TV" android:text="@string/updateConfeid6String" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_gravity="top" android:gravity="center_vertical|center_horizontal" android:textSize="25px" android:padding="7dip"></TextView>
			<EditText android:id="@+id/updateConfeid6Text" android:text=""  android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="7dip"></EditText>
        </TableRow>
	</TableLayout>   

    <LinearLayout android:layout_width="match_parent" android:id="@+id/updateConfLinearLayout2" android:orientation="vertical" android:layout_height="wrap_content"  >
		<TextView android:id="@+id/updateConfTitleTV2" android:text="" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_gravity="top" android:gravity="center_vertical|center_horizontal" android:textSize="25px"></TextView>
    </LinearLayout>

	<TableLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/updateConftableLayout3">
        <TableRow android:id="@+id/updateConftableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TextView android:id="@+id/updateConfMRTV" android:text="@string/updateConfMRString" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_gravity="top" android:gravity="center_vertical|center_horizontal" android:textSize="25px" android:padding="7dip"></TextView>
			<EditText android:id="@+id/updateConfMRText" android:text=""  android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="7dip"></EditText>
        </TableRow>
	</TableLayout>   

    <LinearLayout android:layout_width="match_parent" android:id="@+id/updateConfLinearLayout3" android:orientation="vertical" android:layout_height="wrap_content"  >
		<TextView android:id="@+id/updateConfTitleTV3" android:text="" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_gravity="top" android:gravity="center_vertical|center_horizontal" android:textSize="25px"></TextView>
    </LinearLayout>

	<TableLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/updateConftableLayout4">
        <TableRow android:id="@+id/updateConftableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TextView android:id="@+id/updateConfMSTV" android:text="@string/updateConfMSString" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_gravity="top" android:gravity="center_vertical|center_horizontal" android:textSize="25px" android:padding="7dip"></TextView>
			<EditText android:id="@+id/updateConfMSText" android:text=""  android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="7dip"></EditText>
        </TableRow>
	</TableLayout>   

    <LinearLayout android:layout_width="match_parent" android:id="@+id/updateConfLinearLayout4" android:orientation="vertical" android:layout_height="wrap_content"  >
		<TextView android:id="@+id/updateConfTitleTV4" android:text="" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_gravity="top" android:gravity="center_vertical|center_horizontal" android:textSize="25px"></TextView>
    </LinearLayout>

	<TableLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/updateConftableLayout5">
        <TableRow android:id="@+id/updateConftableRow5" android:layout_width="wrap_content" android:layout_height="wrap_content">
			<TextView android:id="@+id/updateConfMSKeyTV" android:text="@string/updateConfMSKeyString" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_gravity="top" android:gravity="center_vertical|center_horizontal" android:textSize="25px" android:padding="7dip"></TextView>
			<EditText android:id="@+id/updateConfMSKeyText" android:text=""  android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="7dip"></EditText>
        </TableRow>
	</TableLayout>   

    <LinearLayout android:layout_width="match_parent" android:id="@+id/updateConfLinearLayout4" android:orientation="vertical" android:layout_height="wrap_content"  >
		<TextView android:id="@+id/updateConfTitleTV4" android:text="" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_gravity="top" android:gravity="center_vertical|center_horizontal" android:textSize="25px"></TextView>
    </LinearLayout>

	<TableLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/updateConftableLayout2">
        <TableRow android:id="@+id/updateConftableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:id="@+id/updateConfButton" android:text="@string/updateConfChgString" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="2.5" android:onClick="updateConfClicked"></Button>
        </TableRow>
	</TableLayout>   
	
</LinearLayout>
